<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/editTextProvince"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/province"
        android:inputType="text"
        android:autofillHints="@string/province"
        android:importantForAutofill="yes"
        app:layout_constraintStart_toStartOf="@+id/textViewProvince"
        app:layout_constraintTop_toBottomOf="@+id/textViewProvince" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        android:autofillHints="@string/city"
        android:importantForAutofill="yes"
        app:layout_constraintStart_toStartOf="@+id/textViewCity"
        app:layout_constraintTop_toBottomOf="@+id/textViewCity" />

    <EditText
        android:id="@+id/editTextBarangay"
        android:layout_width="183dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/barangay"
        android:autofillHints="@string/barangay"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textViewBarangay"
        app:layout_constraintTop_toBottomOf="@+id/textViewBarangay" />

    <TextView
        android:id="@+id/textViewProvince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="240dp"
        android:text="@string/province"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="160dp"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBarangay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/barangay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/all_fields_are_required"
        app:layout_constraintStart_toStartOf="@+id/editTextProvince"
        app:layout_constraintTop_toBottomOf="@+id/editTextProvince" />

    <Button
        android:id="@+id/submitAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/locate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>